# Giulia-Pythontastic-Toolkit

./: Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
docs/: index.md
giulia-python-toolkit/: decorators.py
src/giulia-pythontastic-toolkit/: __init__.py  decorators.py
src/giulia_pythontastic_toolkit/: __init__.py
src/giulia_pythontastic_toolkit/decorators/: __init__.py  decorators.py
src/giulia_pythontastic_toolkit/experiments/: markovchains.py
src/giulia_pythontastic_toolkit/handlers/: files.py
